@startuml

class IFoo<<Interface>>
{
+ {abstract} fooStr(std::string&): void
}

class foo
{
+ fooStr(std::string&): void
}

class mockFoo
{
+ fooStr(std::string&): void
}

class dummy
{
+ dummy(IFoo&)
# IFoo foo
}

class test
{
# mockFoo fooMock
# unique_ptr<dummy> testDummy
}



IFoo <|.. foo
IFoo <|.. mockFoo
dummy -right-> IFoo

test *-- dummy
test *-- mockFoo

@enduml
